# SSTT

./: .gitignore  Cargo.toml  README.md  justfile
codegen/: Cargo.toml
codegen/src/: main.rs  try_fold.rs  try_take.rs
src/: lib.rs  try_fold.rs  try_take.rs
