[package]
name = "SSTT"
version = "0.1.0"
edition = "2021"
authors = ["Kaiyo Hugo"]
keywords = ["syn", "traits","trait", "utility"]
categories = ["category:development-tools::procedural-macro-helpers"]
license = "MIT"
description = "More Syn Syntax Tree Traversal Trait"
repository = "https://github.com/MadyLab/SSTT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"

[dependencies.syn]
version = "2"
features = ["full"]

[workspace]
members = ["codegen"]
