[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
raw = []

[dependencies]
syn-codegen = "0.3.1"
prettyplease = "0.2.5"
quote = "1"
serde_json = "1"
proc-macro2 = "1"
syn = "2"
heck = "0.4.1"
